fixed some spacing issues in title

--- a/css/index.css
+++ b/css/index.css
@@ -28,8 +28,7 @@ html{
     font-size:62.5%;
 }
 body{
-    font-size:1.6rem;
-    line-height: 1.3;
+    font-size:1.6rem; 
     font-family: 'Raleway', sans-serif;	
 }
 h1, p, .name, .bio {	
@@ -140,6 +139,10 @@ button:hover{
 .artist img{
     width: 70%;
     height: 40vh;
+}
+
+.artist p{
+    line-height: 1.3rem;
 }
 
 /* Media Queries for Responsiveness */
